# rinha-de-backend-2026

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.builder  README.md  docker-compose.image.yml  docker-compose.yml  dune-project  haproxy.cfg  info.json  rinha_2026_ocaml.opam
.github/workflows/: deploy.yml
src/: config.ml  convert_references.ml  dune  index.ml  main.ml  runtime_json.ml  time_util.ml  vectorize.ml
test/: dune  test_vectorize.ml
tools/: convert_references.py
